--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
     background-color: #444;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 .container {
