--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,13 @@ body {
     justify-content: center;
     align-items: center;
     align-content: center;
+}
+
+.login {
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
@@ -64,13 +69,12 @@ label {
 
 input {
     width: 75%;
-    height: 50px;
     border: 0px;
-    padding: 15px;
+    padding: 10px;
     margin: 15px auto 0 auto;
     font-size: 18px;
     border: 1px solid #ccc;
-    border-radius: 8px;
+    border-radius: 5px;
     text-align: center;
 }
 
@@ -104,4 +108,14 @@ input:focus {
 
 .input-error {
     border: 1px solid red;;
+}
+
+@media screen and (max-width:768px) {
+    .container {
+        width: 90%;
+    }
+
+    input {
+        width: 80%;
+    }
 }
